--- a/GameApps/Base.lproj/Main.storyboard
+++ b/GameApps/Base.lproj/Main.storyboard
@@ -40,6 +40,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="GameTableView" destination="sV3-kp-85q" id="kVc-oV-fYM"/>
+                        <outlet property="gameTableView" destination="sV3-kp-85q" id="z2H-gc-waY"/>
                         <outlet property="loadingIndicator" destination="W6d-rv-iDT" id="ajv-Yn-1ca"/>
                         <segue destination="aTa-e2-VzQ" kind="show" identifier="moveToDetail" id="faJ-cX-qtp"/>
                     </connections>
@@ -72,22 +73,118 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="69u-WY-ePv">
                                 <rect key="frame" x="150" y="119" width="20" height="20"/>
                             </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ocu-0I-nZG">
+                                <rect key="frame" x="10" y="240" width="31" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3BG-RN-kyb">
+                                <rect key="frame" x="10" y="256.5" width="30.5" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctt-QF-K4m">
+                                <rect key="frame" x="10" y="300" width="30" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pZU-Cs-sL4">
+                                <rect key="frame" x="10" y="279" width="300" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Website" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C04-U7-xwY">
+                                <rect key="frame" x="10" y="322.5" width="300" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Otz-pt-Rz4">
+                                <rect key="frame" x="10" y="343.5" width="58.5" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="fNA-gn-lhp"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Official">
+                                            <attributes>
+                                                <font key="NSFont" metaFont="system" size="11"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="goToWebsite:" destination="aTa-e2-VzQ" eventType="touchUpInside" id="MuS-No-mGT"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ETZ-uc-yxU">
+                                <rect key="frame" x="72.5" y="343.5" width="56" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="91R-A6-JPe"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" titleAlignment="center">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Reddit">
+                                            <attributes>
+                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <font key="NSFont" size="11" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="goToReddit:" destination="aTa-e2-VzQ" eventType="touchUpInside" id="W8G-cS-GJX"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ZXv-h3-Gwv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="ZXv-h3-Gwv" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="LOj-0c-f1v" secondAttribute="trailing" constant="10" id="3I8-Iv-iVs"/>
+                            <constraint firstItem="Otz-pt-Rz4" firstAttribute="leading" secondItem="ZXv-h3-Gwv" secondAttribute="leading" constant="10" id="4j5-ub-AGW"/>
                             <constraint firstItem="69u-WY-ePv" firstAttribute="centerX" secondItem="hOA-rc-Ia0" secondAttribute="centerX" id="7Xo-GC-tlr"/>
+                            <constraint firstItem="Ocu-0I-nZG" firstAttribute="leading" secondItem="ZXv-h3-Gwv" secondAttribute="leading" constant="10" id="B06-wy-Bag"/>
+                            <constraint firstItem="ZXv-h3-Gwv" firstAttribute="trailing" secondItem="C04-U7-xwY" secondAttribute="trailing" constant="10" id="HZ0-jH-rPt"/>
+                            <constraint firstItem="ctt-QF-K4m" firstAttribute="leading" secondItem="ZXv-h3-Gwv" secondAttribute="leading" constant="10" id="HyA-vh-dsR"/>
+                            <constraint firstItem="ctt-QF-K4m" firstAttribute="top" secondItem="pZU-Cs-sL4" secondAttribute="bottom" constant="4" id="I3P-Ow-5En"/>
+                            <constraint firstItem="Otz-pt-Rz4" firstAttribute="top" secondItem="C04-U7-xwY" secondAttribute="bottom" constant="4" id="J4u-qr-3V7"/>
+                            <constraint firstItem="ZXv-h3-Gwv" firstAttribute="trailing" secondItem="pZU-Cs-sL4" secondAttribute="trailing" constant="10" id="JQv-RD-0p2"/>
+                            <constraint firstItem="pZU-Cs-sL4" firstAttribute="leading" secondItem="ZXv-h3-Gwv" secondAttribute="leading" constant="10" id="Qa1-7U-xnc"/>
+                            <constraint firstItem="ETZ-uc-yxU" firstAttribute="leading" secondItem="Otz-pt-Rz4" secondAttribute="trailing" constant="4" id="R4O-tO-AT8"/>
+                            <constraint firstItem="ZXv-h3-Gwv" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Ocu-0I-nZG" secondAttribute="trailing" constant="10" id="U0o-3w-8Mc"/>
                             <constraint firstItem="hOA-rc-Ia0" firstAttribute="centerX" secondItem="p0z-K9-LF8" secondAttribute="centerX" id="VAU-Ym-vVO"/>
+                            <constraint firstItem="C04-U7-xwY" firstAttribute="top" secondItem="ctt-QF-K4m" secondAttribute="bottom" constant="8" id="ay9-5H-Coj"/>
+                            <constraint firstItem="3BG-RN-kyb" firstAttribute="top" secondItem="Ocu-0I-nZG" secondAttribute="bottom" constant="2" id="bR9-7d-bKa"/>
+                            <constraint firstItem="pZU-Cs-sL4" firstAttribute="top" secondItem="3BG-RN-kyb" secondAttribute="bottom" constant="8" id="di6-Ei-eqH"/>
+                            <constraint firstItem="ZXv-h3-Gwv" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ctt-QF-K4m" secondAttribute="trailing" constant="10" id="eG5-I9-Yl9"/>
+                            <constraint firstItem="C04-U7-xwY" firstAttribute="leading" secondItem="ZXv-h3-Gwv" secondAttribute="leading" constant="10" id="gHF-KB-Q4q"/>
                             <constraint firstItem="69u-WY-ePv" firstAttribute="centerY" secondItem="hOA-rc-Ia0" secondAttribute="centerY" id="gI9-Xx-bMF"/>
                             <constraint firstItem="LOj-0c-f1v" firstAttribute="top" secondItem="hOA-rc-Ia0" secondAttribute="bottom" constant="8" id="lme-yK-tfu"/>
+                            <constraint firstItem="ETZ-uc-yxU" firstAttribute="top" secondItem="C04-U7-xwY" secondAttribute="bottom" constant="4" id="oGA-Tv-DWc"/>
                             <constraint firstItem="hOA-rc-Ia0" firstAttribute="top" secondItem="ZXv-h3-Gwv" secondAttribute="top" constant="10" id="sLb-nA-VoI"/>
+                            <constraint firstItem="3BG-RN-kyb" firstAttribute="leading" secondItem="ZXv-h3-Gwv" secondAttribute="leading" constant="10" id="sdH-IF-WOa"/>
+                            <constraint firstItem="ZXv-h3-Gwv" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ETZ-uc-yxU" secondAttribute="trailing" constant="4" id="tJh-P2-kZX"/>
                             <constraint firstItem="LOj-0c-f1v" firstAttribute="leading" secondItem="ZXv-h3-Gwv" secondAttribute="leading" constant="10" id="u5s-EQ-chE"/>
+                            <constraint firstItem="ZXv-h3-Gwv" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="3BG-RN-kyb" secondAttribute="trailing" constant="10" id="wEx-GM-pTD"/>
+                            <constraint firstItem="Ocu-0I-nZG" firstAttribute="top" secondItem="LOj-0c-f1v" secondAttribute="bottom" constant="4" id="wba-f7-r3U"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Detail" id="i9a-PL-8Rx"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="gameDescLabel" destination="ctt-QF-K4m" id="vIQ-Vc-v6s"/>
                         <outlet property="gameImageView" destination="hOA-rc-Ia0" id="VXJ-p3-i0E"/>
+                        <outlet property="gameRatingLabel" destination="3BG-RN-kyb" id="2Y8-fL-Pux"/>
+                        <outlet property="gameReleasedLabel" destination="Ocu-0I-nZG" id="yAh-2i-ueM"/>
                         <outlet property="gameTitleLabel" destination="LOj-0c-f1v" id="gZP-LR-VFZ"/>
                         <outlet property="imageLoadingIndicator" destination="69u-WY-ePv" id="1u2-BL-E5a"/>
                     </connections>
@@ -141,8 +238,29 @@
                     <view key="view" contentMode="scaleToFill" id="rcd-mL-Agt">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork" translatesAutoresizingMaskIntoConstraints="NO" id="DPt-DT-5oK">
+                                <rect key="frame" x="110" y="234" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="E6d-eV-ase"/>
+                                    <constraint firstAttribute="width" constant="100" id="g7z-uC-D6f"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Permana LWEP" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qq-If-B9K">
+                                <rect key="frame" x="105" y="338" width="110.5" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="gZp-Zj-PoH"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="DPt-DT-5oK" firstAttribute="centerY" secondItem="rcd-mL-Agt" secondAttribute="centerY" id="Trb-gI-QDF"/>
+                            <constraint firstItem="DPt-DT-5oK" firstAttribute="centerX" secondItem="rcd-mL-Agt" secondAttribute="centerX" id="kpd-Di-mq4"/>
+                            <constraint firstItem="7qq-If-B9K" firstAttribute="centerX" secondItem="rcd-mL-Agt" secondAttribute="centerX" id="rAH-u6-8TW"/>
+                            <constraint firstItem="7qq-If-B9K" firstAttribute="top" secondItem="DPt-DT-5oK" secondAttribute="bottom" constant="4" id="vwX-vZ-n3c"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="l06-CQ-VBr">
                         <barButtonItem key="backBarButtonItem" title="Kembali" id="tPi-WA-UKx"/>
@@ -159,7 +277,7 @@
                     <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="yV4-if-KqN"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ciT-QG-qms">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -174,6 +292,7 @@
     </scenes>
     <resources>
         <image name="homekit" catalog="system" width="128" height="104"/>
+        <image name="iTunesArtwork" width="600" height="800"/>
         <image name="person" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
